# rust-smtp-server

./: Cargo.toml  test_message.sh
src/: main.rs  smtp.rs
